--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -2,7 +2,8 @@ name: Deploy to Amazon EC2
 
 on:
   push:
-    branches: [ "master", "dev" ]
+    #disabling for now
+    branches: [ "none" ]
 
 permissions:
   contents: read
@@ -60,8 +61,10 @@ jobs:
         --tag-specifications 'ResourceType=instance,Tags=[{Key=Name,Value=handyman}]' \
         --query 'Instances[*].[InstanceId]' \
         --output text \
-        --user-data handyman\deploy\user_data.sh)"
+        --user-data file://handyman/deploy/user_data.sh)"
+        aws ec2 wait instance-running --instance-ids $instance
         aws ec2 associate-address --instance-id $instance --allocation-id ${{ secrets.AWS_HANDYMAN_EIP }}
+        
 
 
 
